--- a/AutoClick/Pages/AnunciarMiAuto.cshtml
+++ b/AutoClick/Pages/AnunciarMiAuto.cshtml
@@ -2,6 +2,7 @@
 @model AnunciarMiAutoModel
 @{
     ViewData["Title"] = Model.IsEditMode ? "Editar Anuncio - AutoClick.cr" : "Anunciar Mi Auto - AutoClick.cr";
+    Layout = "~/Pages/Shared/_LayoutMinimal.cshtml"; // Usar el mismo layout que Index
 }
 
 @section Styles {
