--- a/AutoClick/Pages/Explorar.cshtml
+++ b/AutoClick/Pages/Explorar.cshtml
@@ -8,7 +8,7 @@
 <!-- Header removed - Using universal header -->
     <div class="logo-container">
         <a asp-page="/Index">
-            <img src="~/images/logo.png" alt="AutoClick.cr" style="height: 23px;" />
+            <img src="~/images/logos/autoclick-logo-hd.png" alt="AutoClick.cr" style="height: 23px;" />
         </a>
     </div>
     
